align bug fixed. help draw replace.

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -103,7 +103,7 @@ body {
 		.arrow{
 			border-width: 11px;
 			bottom: -11px;
-			left: 50%;
+			left: 60%;
 			margin-left: -11px;
 			border-top-color: rgba(0,0,0,.25);
 			border-bottom-width: 0;
@@ -127,7 +127,7 @@ body {
 	}
 	.draw{
 		width: 100%;
-		height: 320px;
+		height: 240px;
 		margin-bottom: 10px;
 		background: url("../img/draw.jpg") center bottom no-repeat;
 	}
@@ -224,19 +224,25 @@ body {
 	}
 	.lead-kinds{
 		width: 100%;
-		height: 80px;
+		height: 30px;
 		margin-bottom: 20px;
 		.kind{
 			float: left;
 			width: 25%;
-			height: 40px;
-			padding: 10px;
+			height: 20px;
 			line-height: 1.4;
 			text-align: center;
 			.kind-check{
+				vertical-align: top;
 				text-align: left;
-				width: 60px;
 				margin: 0 auto;
+				input[type="radio"], input[type="checkbox"]{
+					margin-top:0;
+				}
+				label{
+					vertical-align: top;
+					line-height: 14px;
+				}
 			}
 		}
 	}
@@ -384,7 +390,17 @@ only screen and (                min-resolution: 2dppx) {
 		}
 	}
 }
+}
 
-
-
+@media only screen and (min-device-width : 320px){
+	#new-order{
+		.lead-kinds{
+			.kind{
+				width: 23%;
+				&:nth-of-type(3){
+					width:31%;
+				}
+			}
+		}
+	}
 }
